# rp2350-auth-token

./: .gitignore  CMakeLists.txt  LICENSE  PROTOCOL.md  README.md  RELEASE_HARDENING.md  THIRD_PARTY_NOTICES.md  get_state_hid.py  host_protocol.py  install_udev_rule.sh  provision_hid.py  provision_release_device.sh  regression_hid.py  test_hid.py
.github/workflows/: ci.yml  release-dev.yml
src/: crypto.c  crypto.h  main.c  mbedtls_config.h  tusb_config.h  usb_descriptors.c
tests/: test_protocol.py
udev/: 99-rp2350-token.rules
